--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Pokémon Übersicht</title>
+    <link rel="icon" href="pokeball.png" type="image/x-icon">
+    <title>Poké-Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
